# matsuni

./: DOCKERFILE  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
bot/: credentials.json  main.py
bot/database/: cache.py  gsheets.py
bot/keyboards/: main_menu.py
bot/services/: image_ocr.py  matsuni_calc.py  report_gen.py
bot/utils/: formatters.py  validators.py
config/: settings.py
web/: app.py
